# TALLER-SISTEMAS

./: .env.example.sdd  .gitmodules  README.md  resumen_proyect.md
.github/: copilot-instructions.md
.github/agents/: analysis.agent.md  api-champion.agent.md  architect.agent.md  brainstorming.agent.md  clarification.agent.md  constitution.agent.md  gherkin-analyst.agent.md  messaging-champion.agent.md  refactoring.agent.md  requirement-analyst.agent.md  review.agent.md  (+5 more)
.sdd-extensions/: AUTHORING-GUIDE.md  README.md
.sdd-modules/: README.md  registry.json
.specify/: command-taxonomy.json  config.json  init-options.json  integration.json  skill-mapping.yaml
.specify/cli/: pyproject.toml
.specify/cli/sdd/: __init__.py  __main__.py  cli.py  main.py
.specify/cli/sdd/commands/: __init__.py  accept_drift.py  adapters.py  analyze.py  autonomy.py  bridge.py  context.py  diff_drift.py  doctor.py  extension.py  gate.py  ingest.py  init.py  memory.py  module.py  new.py  preset.py  report.py  resume.py  retrospect.py  route.py  schema.py  ship.py  skill.py  spell.py  spike.py  status.py  sync.py  trace.py
.specify/cli/sdd/io/: __init__.py  atomic.py  cli_helpers.py  json_envelope.py
.specify/cli/sdd/policy/: __init__.py  gate.py  loader.py
.specify/cli/sdd/utils/: __init__.py  artifact_adopt.py  artifact_integrity.py  ci_pin_scan.py  config.py  deprecation.py  feature_resolver.py  memory_index.py  memory_ranking.py  module_integrity.py  output.py  skill_eval.py  skill_mapping.py  tokenizer.py  traceability.py
.specify/cli/tests/: test_cli.py
(+444 files in other folders)
