[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-sdd"
version = "0.1.0"
description = "Enterprise Software Design Document (SDD) workflow CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["sdd", "specification", "workflow", "ai", "copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
dependencies = ["pyyaml>=6.0"]

[project.scripts]
sdd = "sdd.cli:main"

[project.urls]
Repository = "https://github.com/your-org/enterprise-sdd"
Issues = "https://github.com/your-org/enterprise-sdd/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdd*"]

[tool.setuptools.package-data]
sdd = ["py.typed"]
